--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,13 @@
 #root {
-  max-width: 1280px;
+  width: 100%;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+}
+
+body {
+  background: #fff;
+  color: #000;
+  margin: 0;
 }
 
 .logo {
@@ -11,6 +16,7 @@
   will-change: filter;
   transition: filter 300ms;
 }
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
