--- a/src/components/ProductCarousel/ProductCarousel.scss
+++ b/src/components/ProductCarousel/ProductCarousel.scss
@@ -34,7 +34,7 @@
     font-family: "Nunito";
     color: #000;
     font-weight: 900;
-    text-align: left; 
+    text-align: left;
 
     @media (max-width: 1024px) {
       margin: 0 12px;
@@ -66,6 +66,7 @@
 
     @media (max-width: 768px) {
       margin: 0 auto;
+      width: 100% !important;
     }
 
     &:hover {
@@ -117,6 +118,10 @@
       width: 100%;
       height: auto;
       max-width: 216px;
+
+      @media (max-width: 768px) {
+        max-width: 132px;
+      }
     }
 
     .product-name {
@@ -140,6 +145,10 @@
       font-size: 14px;
       margin-bottom: 8px;
 
+      @media (max-width: 768px) {
+        margin-bottom: 5px;
+      }
+
       .list-price {
         font-size: 12px;
         font-family: "Nunito";
@@ -161,13 +170,19 @@
       font-family: "Nunito";
       color: #7A7A7A;
       margin-bottom: 12px;
+
+      @media (max-width: 768px) {
+        margin-bottom: 5px;
+      }
     }
 
     .buy-button {
-      opacity: 1;
+      opacity: 0;
+      font-family: "Nunito";
+      font-weight: 600;
       background-color: #000;
       color: #fff;
-      padding: 5px 37px;
+      padding: 5px 28px;
       border: none;
       border-radius: 6px;
       cursor: pointer;
@@ -176,6 +191,11 @@
       height: 33px;
       align-self: center;
       margin-bottom: 12px;
+
+      @media (max-width: 768px) {
+        opacity: 1;
+        margin-bottom: 5px;
+      }
     }
   }
 }
