--- a/src/components/Newsletter/Newsletter.scss
+++ b/src/components/Newsletter/Newsletter.scss
@@ -1,116 +1,151 @@
 .newsletter {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2rem;
+  background-color: #F2F2F2;
+
+  @media (max-width: 768px) {
+    padding: 1rem 0;
+  }
+
+  .form {
+    width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    padding: 2rem;
-    background-color: #f9f9f9;
-  
+
+    @media (max-width: 768px) {
+      padding: 0;
+      max-width: 290px;
+    }
+
     h1 {
-      font-size: 1.5rem;
       text-align: center;
       margin-bottom: 1rem;
       color: #333;
+      font-family: "Lato";
+      font-size: 22px;
+      font-weight: bold;
+
+      @media (max-width: 768px) {
+        text-align: left;
+      }
     }
-  
-    .form {
-      width: 100%;
+
+    .form-group {
       display: flex;
       flex-direction: column;
+      width: 280px;
+      height: 48px;
+      position: relative;
 
-      h1 {
-        font-family: "Lato";
-        font-size: 22px;
+      @media (max-width: 768px) {
+        width: 288px;
+        height: 68px;
+      }
+
+      input {
+        height: 100%;
+        height: 48px;
+        border-color: transparent;
+        border-radius: 6px;
+        font-size: 12px;
         font-weight: bold;
-      }
-  
-      .form-group {
-        margin-bottom: 1rem;
-        display: flex;
-        flex-direction: column;
-  
-        input {
-          width: 100%;
-          max-width: 280px;
-          height: 48px;
-          padding: 0 5px;
-          border-color: transparent;
-          border-radius: 6px;
-          font-size: 1rem;
-  
-          &.error {
-            border-color: #D7182A;
-          }
+        font-family: "Lato";
+        padding: 0 15px;
+
+        &.error {
+          border-color: #D7182A;
         }
-  
-        small {
-          color: #D7182A;
-          font-size: 0.875rem;
-          margin-top: 0.25rem;
-          display: block;
+
+        &:focus-visible &:focus {
+          border-color: #BDBDBD;
         }
       }
-  
-      .form-horizontal {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 5px;
-  
-        .form-group {
-          margin-bottom: 0;
-  
-          input {
-            width: 100%;
-          }
+
+      small {
+        color: #D7182A;
+        font-size: 12px;
+        font-weight: 700;
+        font-family: "Lato";
+        display: block;
+        margin-top: 5px;
+
+        @media (min-width: 769px) {
+          position: absolute;
+          bottom: -20px;
+          left: 0;
         }
-  
-        .black-button {
-          flex-shrink: 0;
-          padding: 0.75rem 1.5rem;
-          background-color: #000;
-          color: #fff;
-          border: none;
-          border-radius: 6px;
-          font-size: 1rem;
-          cursor: pointer;
-          max-width: 140px;
-          height: 48px;
-  
-          &:hover {
-            background-color: #333;
-          }
-        }
+
       }
     }
-  
-    .success-message {
-      text-align: center;
-  
-      h1 {
-        font-size: 1.5rem;
-        margin-bottom: 1rem;
-        color: #333;
+
+    .form-horizontal {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+
+      @media (max-width: 768px) {
+        flex-direction: column;
       }
-  
-      p {
-        font-size: 1rem;
-        color: #555;
-        margin-bottom: 1.5rem;
-      }
-  
+
       .black-button {
+        flex-shrink: 0;
         padding: 0.75rem 1.5rem;
         background-color: #000;
         color: #fff;
         border: none;
-        border-radius: 4px;
-        font-size: 1rem;
+        border-radius: 6px;
         cursor: pointer;
-  
+
+        max-width: 140px;
+        height: 48px;
+
+        font-size: 14px;
+        font-weight: bold;
+        font-family: "Lato";
+
+        @media (max-width: 768px) {
+          padding: 0;
+          width: 100%;
+          max-width: 288px;
+        }
+
         &:hover {
           background-color: #333;
         }
       }
     }
   }
-  
+
+  .success-message {
+    text-align: center;
+
+    h1 {
+      font-size: 1.5rem;
+      margin-bottom: 1rem;
+      color: #333;
+    }
+
+    p {
+      font-size: 1rem;
+      color: #555;
+      margin-bottom: 1.5rem;
+    }
+
+    .black-button {
+      padding: 0.75rem 1.5rem;
+      background-color: #000;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+
+      cursor: pointer;
+
+      &:hover {
+        background-color: #333;
+      }
+    }
+  }
+}
