feat: footer finalizado e adicionando minicart

--- a/src/components/Newsletter/Newsletter.scss
+++ b/src/components/Newsletter/Newsletter.scss
@@ -26,6 +26,7 @@
       font-family: "Lato";
       font-size: 22px;
       font-weight: bold;
+      margin-top: 0;
 
       @media (max-width: 768px) {
         text-align: left;
