--- a/src/components/ProductCarousel/ProductCarousel.scss
+++ b/src/components/ProductCarousel/ProductCarousel.scss
@@ -4,6 +4,10 @@
   width: 100%;
   margin: 0 auto;
 
+  @media (min-width: 768px) and (max-width: 1250px) {
+    max-width: 1140px;
+  }
+
   @media (max-width: 768px) {
     margin: 25px 0 50px;
   }
