--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -95,6 +95,27 @@
       align-items: center;
       background: none;
       border: none;
+      cursor: pointer;
+
+      span {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    
+        width: 16px;
+        height: 15px;
+        border-radius: 30px;
+    
+        background-color: #F8475F;
+        color: #fff;
+        
+        font-family: "Nunito";
+        font-size: 10px;
+        font-weight: bold;
+        letter-spacing: 0em;
+
+        margin-left: 5px;
+    }
 
       .user-icon {
         padding: 5px;
