--- a/src/components/Minicart/MiniCartItem/MiniCartItem.scss
+++ b/src/components/Minicart/MiniCartItem/MiniCartItem.scss
@@ -3,7 +3,7 @@
     
     overflow: auto;
     height: 100%;
-    max-height: 562px;
+    max-height: 730px;
 
     &::-webkit-scrollbar {
         width: 5px;
@@ -14,7 +14,7 @@
     }
 
     &::-webkit-scrollbar-thumb {
-        background-color: #084154;
+        background-color: #000;
         border-radius: 5px;
     }
 
@@ -22,8 +22,8 @@
         display: flex;
         flex-direction: row;
         justify-content: space-evenly;
-        border-bottom: 1px solid #084154;
-        margin: 0 10px;
+        border-bottom: 1px solid #000;
+        margin: 5px;
 
         .miniCartItem {
             display: flex;
@@ -33,7 +33,7 @@
             padding: 0 5px;
         
             .miniCartItemImage {
-                width: 180px;
+                width: 125px;
             }
         
             .miniCartItemData {
@@ -44,22 +44,24 @@
                 min-width: 100px;
 
                 .miniCartItemName {
-                    font-family: "Roboto";
+                    font-family: "Nunito";
                     font-size: 16px;
                     font-weight: 400;
                     line-height: 16px;
                     letter-spacing: 0em;
-                    color: #084154;
+                    color: #000;
                 }
         
                 .miniCartItemPrice {
-                    font-family: "Roboto";
+                    font-family: "Nunito";
                     font-size: 16px;
                     font-weight: 700;
                     line-height: 16px;
                     letter-spacing: 0em;
-                    color: #084154;
-
+                    color: #000;
+                    display: flex;
+                    flex-direction: column;
+                    gap: 10px;
                 }
     
                 .miniCartItemQuantity  {
@@ -67,14 +69,11 @@
                     flex-direction: row;
                     align-items: center;
                     justify-content: space-evenly;
-                    span {
-    
-                    }
 
                     button {
-                        background-color: #084154;
+                        background-color: #000;
                         color: #fff;
-                        height: 30px;
+                        height: 20px;
                         width: 30px;
                         border-radius: 15px;
                         border: none;
