--- a/src/components/Minicart/Minicart.scss
+++ b/src/components/Minicart/Minicart.scss
@@ -1,5 +1,4 @@
-
-.containerMinicart{
+.containerMinicart {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -9,11 +8,11 @@
     max-width: 380px;
     height: 100%;
     max-height: 100%;
-    border-left: 2px solid #084154;
+    border-left: 2px solid #000;
     top: 0;
     background: #fff;
     z-index: 999;
-    transition: all .5s cubic-bezier(.23,1,.32,1);
+    transition: all .8s cubic-bezier(.23, 1, .32, 1);
     overflow: auto;
 
     &::-webkit-scrollbar {
@@ -25,7 +24,7 @@
     }
 
     &::-webkit-scrollbar-thumb {
-        background-color: #3EC6E0;
+        background-color: #000;
         border-radius: 5px;
     }
 
@@ -34,45 +33,47 @@
         flex-direction: row;
         justify-content: space-between;
         padding: 30px;
+        background-color: #000;
 
         span {
-            font-family: "Roboto";
+            font-family: "Nunito";
             font-size: 30px;
             font-weight: 300;
             line-height: 16px;
             letter-spacing: 0em;
-            color: #084154;
+            color: #FFF;
         }
 
     }
 
     .containerTotalCart {
-        background-color: gainsboro;
+        background-color: #E6E8EA;
         text-align: end;
         padding: 30px;
-        max-height: 200px;
+        max-height: 70px;
         height: 100%;
 
         display: flex;
         align-items: center;
-        justify-content: space-between;
+        justify-content: flex-start;
+        gap: 10px;
 
         .totalCart {
-            font-family: "Roboto";
-            font-size: 30px;
-            font-weight: 300;
-            line-height: 16px;
-            letter-spacing: 0em;
-            color: #084154;
-        }
-
-        .valueTotalCart {
-            font-family: "Roboto";
+            font-family: "Nunito";
             font-size: 30px;
             font-weight: 900;
             line-height: 16px;
             letter-spacing: 0em;
-            color: #084154;
+            color: #000;
+        }
+
+        .valueTotalCart {
+            font-family: "Nunito";
+            font-size: 30px;
+            font-weight: 600;
+            line-height: 16px;
+            letter-spacing: 0em;
+            color: #000;
 
         }
     }
