--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -13,7 +13,7 @@
     }
 
     @media (min-width: 768px) and (max-width: 1300px) {
-        padding: 0 90px;
+        padding: 20px 90px;
     }
 
     .container__contact {
