--- a/src/components/Minicart/MiniCartItem/MiniCartItem.scss
+++ b/src/components/Minicart/MiniCartItem/MiniCartItem.scss
@@ -50,6 +50,7 @@
                     line-height: 16px;
                     letter-spacing: 0em;
                     color: #000;
+                    text-align: left;
                 }
         
                 .miniCartItemPrice {
@@ -62,6 +63,10 @@
                     display: flex;
                     flex-direction: column;
                     gap: 10px;
+
+                    .miniCartItemListPrice {
+                        text-decoration: line-through;
+                    }
                 }
     
                 .miniCartItemQuantity  {
@@ -69,6 +74,11 @@
                     flex-direction: row;
                     align-items: center;
                     justify-content: space-evenly;
+
+                    .miniCartItemQuantityNumber {
+                        font-family: "Nunito";
+                        font-weight: 500;
+                    }
 
                     button {
                         background-color: #000;
