--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -27,15 +27,38 @@
       flex-direction: row;
       justify-content: center;
     }
-
   }
+
+  &__logo {
+    align-self: center;
+  }
+
+  &__desktop {
+    height: 80px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 998;
+    /* Para garantir que fique acima de outros elementos */
+    background-color: #fff;
+    /* Mantém a cor de fundo */
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    /* Adiciona uma sombra para separação visual */
+  }
+
 
   .container {
     max-width: 1300px;
     width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+
+    @media (min-width: 768px) and (max-width: 1300px) {
+      max-width: 1140px;
+    }
 
     .subcontainer {
       width: 100%;
@@ -101,21 +124,21 @@
         display: flex;
         align-items: center;
         justify-content: center;
-    
+
         width: 16px;
         height: 15px;
         border-radius: 30px;
-    
+
         background-color: #F8475F;
         color: #fff;
-        
+
         font-family: "Nunito";
         font-size: 10px;
         font-weight: bold;
         letter-spacing: 0em;
 
         margin-left: 5px;
-    }
+      }
 
       .user-icon {
         padding: 5px;
