--- a/src/components/Minicart/Minicart.scss
+++ b/src/components/Minicart/Minicart.scss
@@ -14,6 +14,10 @@
     transition: all .8s cubic-bezier(.23, 1, .32, 1);
     overflow: auto;
 
+    @media (max-width: 768px) {
+        max-width: 100%;
+    }
+
     &::-webkit-scrollbar {
         width: 5px;
     }
@@ -58,7 +62,7 @@
         gap: 10px;
 
         .totalCart {
-            font-family: "Nunito";
+            font-family: "Lato";
             font-size: 30px;
             font-weight: 900;
             line-height: 16px;
@@ -67,7 +71,7 @@
         }
 
         .valueTotalCart {
-            font-family: "Nunito";
+            font-family: "Lato";
             font-size: 30px;
             font-weight: 600;
             line-height: 16px;
