fix: ajustando css de minicart e removendo comentarios

--- a/src/components/Minicart/Minicart.scss
+++ b/src/components/Minicart/Minicart.scss
@@ -47,6 +47,10 @@
             color: #FFF;
         }
 
+        img {
+            cursor: pointer;
+        }
+
     }
 
     .containerTotalCart {
