--- a/src/components/Minicart/MiniCartItem/MiniCartItem.scss
+++ b/src/components/Minicart/MiniCartItem/MiniCartItem.scss
@@ -87,6 +87,7 @@
                         width: 30px;
                         border-radius: 15px;
                         border: none;
+                        cursor: pointer;
                     }
                 }
             }
