--- a/src/components/ProductCarousel/ProductCarousel.scss
+++ b/src/components/ProductCarousel/ProductCarousel.scss
@@ -224,3 +224,25 @@
     }
   }
 }
+
+.spinner-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 200px; /* Ajuste conforme necessário */
+}
+
+.spinner {
+  width: 80px;
+  height: 80px;
+  border: 5px solid rgba(0, 0, 0, 0.1);
+  border-top: 5px solid #536570; /* Cor do spinner */
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
